--- a/abdp.Web/Web.config
+++ b/abdp.Web/Web.config
@@ -9,6 +9,9 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
     <connectionStrings>
+        <add name="abdp_Entities"
+             connectionString="Data source=5CD413422S\SQLEXPRESS;Initial Catalog=abdp_new;Persist Security Info=True;User ID=sa;Password=!@12qwaszx;multipleactiveresultsets=True;App=EntityFramework"
+             providerName="System.Data.SqlClient" />
         <add name="olss_prod_4Entities"
              connectionString="Data source=5CD413422S\SQLEXPRESS;Initial Catalog=olss_abdp;Persist Security Info=True;User ID=sa;Password=!@12qwaszx;multipleactiveresultsets=True;App=EntityFramework"
              providerName="System.Data.SqlClient" />
