--- a/olss.Data/olss.Data.csproj
+++ b/olss.Data/olss.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A5129AD2-C438-4DD8-B437-6BB1B420BA08}</ProjectGuid>
+    <ProjectGuid>{8631EE90-94C6-45C5-8215-0CB7D361F6E2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>abdp.Data</RootNamespace>
-    <AssemblyName>abdp.Data</AssemblyName>
+    <RootNamespace>olss.Data</RootNamespace>
+    <AssemblyName>olss.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -37,44 +37,31 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
-      <HintPath>..\packages\Npgsql.2.2.7\lib\net45\Mono.Security.dll</HintPath>
-    </Reference>
-    <Reference Include="Npgsql, Version=2.2.7.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Npgsql.2.2.7\lib\net45\Npgsql.dll</HintPath>
-    </Reference>
-    <Reference Include="Npgsql.EntityFramework, Version=2.2.7.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Npgsql.EntityFramework.2.2.7\lib\net45\Npgsql.EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\abdpEntities.cs" />
-    <Compile Include="Entities\tm_olss_brand.cs" />
-    <Compile Include="Entities\tm_olss_model_vehicle.cs" />
-    <Compile Include="Infrastructure\DatabaseFactory.cs" />
+    <Compile Include="Entities\MaintenanceCategory.cs" />
+    <Compile Include="Entities\MaintenanceItem.cs" />
+    <Compile Include="Entities\OlssEntities.cs" />
+    <Compile Include="Infrastructure\DatabaseFactoryOlss.cs" />
     <Compile Include="Infrastructure\Disposable.cs" />
-    <Compile Include="Infrastructure\IDatabaseFactory.cs" />
-    <Compile Include="Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\IDatabaseFactoryOlss.cs" />
+    <Compile Include="Infrastructure\IUnitOfWorkOlss.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
-    <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="IRepository\ITmOlssBrandRepository.cs" />
-    <Compile Include="IRepository\ITmOlssModelVehicleRepository.cs" />
+    <Compile Include="Infrastructure\UnitOfWorkOlss.cs" />
+    <Compile Include="IRepository\IMaintenanceCategoryRepository.cs" />
+    <Compile Include="IRepository\IMaintenanceItemRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\TmOlssBrandRepository.cs" />
-    <Compile Include="Repository\TmOlssModelVehicleRepository.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Compile Include="Repository\MaintenanceCategoryRepository.cs" />
+    <Compile Include="Repository\MaintenanceItemRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
